# task-registry

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  index.json  pyproject.toml  schema.json  sonar-project.properties
.github/: dependabot.yml
instrument_registry/: data.py  lifespan.py  server.py
instruments/: aiia.yaml  conformity_assessment_eu_ai_act.yaml  iama.yaml  measures.yaml  requirements.yaml  technical_docs_for_high_risk_ai.yaml
labels/: labels.yaml
lifecycles/: lifecycles.yaml
measures/: 0-org-01-benodigde-expertise-en-capaciteit.yaml  0-org-02-beleid-opstellen-inzet-algoritmes.yaml  0-org-02-beleid_opstellen_inzet_algoritmes.yaml  0-org-02-vastgestelde-beleidskaders.yaml  0-org-03-toepassen-risicobeheer.yaml  0-org-03-toepassen_risicobeheer.yaml  0-org-04-politiek-bestuurlijke-verantwoordelijkheid.yaml  0-org-04-wijzigingenproces.yaml  0-org-05-bestaande-governance.yaml  0-org-05-gebruikersbeheer.yaml  0-org-06-volwassenheidsmodel.yaml  0-org-06-wachtwoordbeheer.yaml  0-org-07-intern-toezicht.yaml  0-org-07-periodieke-evaluatie-kwaliteit.yaml  0-org-08-beslismoment-levenscyclus.yaml  0-org-09-governance-per-risicocategorie.yaml  0-org-10-inrichten-taken-en-verantwoordelijkheden-algoritmegovernance.yaml  0-org-11-gebruikersbeheer.yaml  0-org-12-periodieke-evaluatie-kwaliteit.yaml  0-org-13-wachtwoordbeheer.yaml  0-org-14-wijzigingenproces.yaml  0-org-15-discriminatieprotocol.yaml  1-pba-01-formuleren-probleemdefinitie.yaml  1-pba-02-formuleren-doelstelling.yaml  1-pba-03-onderbouwen-gebruik-algoritme.yaml  1-pba-04-betrek-belanghebbenden.yaml  1-pba-05-wettelijke-grondslag.yaml  1-pba-06-multidisciplinair-inkoopteam.yaml  10_creeer_ruimte_voor_samenwerking_in_contract.yaml  19_aansprakelijkheidsvoorwaarden_aanbieder_onderdeel_beoordelingsmatrix.yaml  2-owp-01-rollen-en-verantwoordelijkheden.yaml  2-owp-02-data-beschikbaarheid.yaml  2-owp-02-gebruikte-data.yaml  2-owp-03-doel-verwerken-persoonsgegevens.yaml  2-owp-04-gebruikte-techniek.yaml  2-owp-05-soort-algoritme.yaml  2-owp-06-afwegen-grondrechten.yaml  2-owp-06-impactanalyse.yaml  2-owp-07-afwegen-grondrechten.yaml  2-owp-07-kwetsbare-groepen.yaml  (+221 more)
requirements/: aia-00-verboden-AI-praktijken.yaml  aia-01-ai-geletterdheid.yaml  aia-01-verboden-AI-praktijken.yaml  aia-02-documentatie-beoordeling-niet-hoog-risico-ai.yaml  aia-03-risicobeheersysteem.yaml  aia-04-risicobeoordeling-voor-jongeren-en-kwetsbaren.yaml  aia-05-data-kwaliteitscriteria.yaml  aia-06-technische-documentatie.yaml  aia-07-automatische-logregistratie.yaml  aia-08-transparantie-aan-gebruiksverantwoordelijken.yaml  aia-09-menselijk-toezicht.yaml  aia-10-nauwkeurigheid-robuustheid-cyberbeveiliging.yaml  aia-11-systeem-voor-kwaliteitsbeheer.yaml  aia-12-bewaartermijn-voor-documentatie.yaml  aia-13-bewaartermijn-voor-gegenereerde-logs.yaml  aia-14-conformiteitsbeoordeling.yaml  aia-15-eu-conformiteitsverklaring.yaml  aia-16-ce-markering.yaml  aia-17-registratieverplichtingen.yaml  aia-18-corrigerende-maatregelen-voor-non-conforme-ai.yaml  aia-19-toegankelijkheidseisen.yaml  aia-20-gebruiksverantwoordelijken-maatregelen.yaml  aia-21-gebruiksverantwoordelijken-menselijk-toezicht.yaml  (+62 more)
(+56 files in other folders)
